# GRPC_Server_Client

./: CMakeLists.txt  Cargo.toml  Readme.md  build.rs
src/: client.rs  server.rs
src/proto/: auth.proto
src/service/: auth.rs
