[package]
name = "GRPC_Server_Client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grpc-server"
path = "src/server.rs"

[[bin]]
name = "grpc-client"
path = "src/client.rs"

[dependencies]
tonic = "0.11.0"
prost = "0.12"
tokio = {version = "1.37.0", features = ["full"]}


[build-dependencies]
tonic-build = "0.11.0"

